--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -3,38 +3,18 @@
   <%= @article.title %>
   </p>
   <p>
+    <%= @article.created_at %>
+    </p>
+    <p>
     <stong>Text:</strong>
     <%= @article.text %>
    </p>
-   <hr>
-
-   <h2> Comments </h2>
-     <% @article.comments.each do |comment| %>
-     <p>
-       <strong>Commenters:</strong>
-         <%= comment.commenter %>
-      </p>
-      <p>
-      <strong>Comment</strong>
-        <%= comment.body %>
-      </p>
-      <% end %>
-   <hr>
-   <h2> Add Comment </h2>
-   <%= form_for([@article, @article.comments.build]) do |f| %>
-   <p>
-    <%= f.label :commenter %><br>
-    <%= f.text_field :commenter %>
-   </p>
-   <p>
-     <%= f.label :body %><br>
-     <%= f.text_area :body %>
-     </p>
-    <p>
-    <%= f.submit %>
-    </p>
-    <% end %>
+     <hr>
+     <%= render 'comments/comment' %>
+   </hr>
+     <%= render 'comments/form' %>  
    
-   <p><%= link_to 'Back', articles_path %>
-   | <%= link_to 'Home', welcome_index_path %>
+   <p>
+      <%= link_to 'Back', articles_path %>|
+    <%= link_to 'Home', welcome_index_path %>
   </p>
